--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "directorytree/ldaprecord",
     "type": "library",
-    "description": "A PHP LDAP Package for humans.",
+    "description": "ActiveRecord for LDAP.",
     "keywords": [
         "active directory",
         "directory",
@@ -29,16 +29,14 @@
     "require": {
         "php": ">=7.0",
         "ext-ldap": "*",
-        "psr/log": "~1.1",
+        "ext-json": "*",
+        "psr/log": "~1.0",
         "tightenco/collect": "~5.0",
         "illuminate/contracts": "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0",
         "mockery/mockery": "~1.0"
-    },
-    "suggest": {
-        "ext-fileinfo": "fileinfo is required when retrieving user encoded thumbnails"
     },
     "archive": {
         "exclude": ["/tests"]
