--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "ext-json": "*",
         "psr/log": "~1.0",
         "psr/simple-cache": "~1.0",
+        "nesbot/carbon": "~2.0",
         "tightenco/collect": "~5.0",
         "illuminate/contracts": "~5.0"
     },
