--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "psr/log": "~1.0",
         "psr/simple-cache": "~1.0",
         "nesbot/carbon": "~2.0",
-        "tightenco/collect": "~5.0",
-        "illuminate/contracts": "~5.0"
+        "tightenco/collect": "^5.0|6.0.*",
+        "illuminate/contracts": "^5.0|6.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.0",
