--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "directorytree/ldaprecord",
     "type": "library",
     "description": "ActiveRecord for LDAP.",
+    "homepage": "https://www.ldaprecord.com",
     "keywords": [
         "active directory",
         "directory",
@@ -32,7 +33,7 @@
         "ext-json": "*",
         "psr/log": "~1.0",
         "psr/simple-cache": "~1.0",
-        "nesbot/carbon": "~2.0",
+        "nesbot/carbon": "~1.0|~2.0",
         "tightenco/collect": "^5.0|6.0.*",
         "illuminate/contracts": "^5.0|6.0.*"
     },
