--- a/composer.json
+++ b/composer.json
@@ -31,15 +31,15 @@
         "php": ">=7.1",
         "ext-ldap": "*",
         "ext-json": "*",
-        "psr/log": "~1.0",
-        "psr/simple-cache": "~1.0",
-        "nesbot/carbon": "~1.0|~2.0",
-        "tightenco/collect": "^5.0|6.0.*",
-        "illuminate/contracts": "^5.0|6.0.*"
+        "psr/log": "^1.0",
+        "psr/simple-cache": "^1.0",
+        "nesbot/carbon": "^1.0|^2.0",
+        "tightenco/collect": "^5.0|^6.0",
+        "illuminate/contracts": "^5.0|^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~6.0",
-        "mockery/mockery": "~1.0"
+        "phpunit/phpunit": "^6.0",
+        "mockery/mockery": "^1.0"
     },
     "archive": {
         "exclude": ["/tests"]
