Fixed docs link

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "license": "MIT",
     "support": {
-        "docs": "https://ldaprecord.com/docs",
+        "docs": "https://ldaprecord.com",
         "issues": "https://github.com/DirectoryTree/LdapRecord/issues",
         "source": "https://github.com/DirectoryTree/LdapRecord",
         "email": "steven_bauman@outlook.com"
