--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "psr/simple-cache": "^1.0",
         "nesbot/carbon": "^1.0|^2.0",
         "tightenco/collect": "^5.0|^6.0|^7.0",
-        "illuminate/contracts": "^5.0|^6.0|^7.0"
+        "illuminate/contracts": "^5.0|^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
