--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
   - 7.4
 
 before_script:
-  - travis_retry composer self-update
+  - travis_retry composer self-update 1.10.10
   - travis_retry composer install --prefer-source --no-interaction
 
 script: ./vendor/bin/phpunit
