--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -16,6 +16,8 @@ jobs:
 
             - name: Run php-cs-fixer
               uses: docker://oskarstark/php-cs-fixer-ga
+              with:
+                args: --allow-risky=yes
 
             - uses: stefanzweifel/git-auto-commit-action@v4
               with:
