--- a/.github/workflows/fix-style.yml
+++ b/.github/workflows/fix-style.yml
@@ -1,4 +1,4 @@
-name: style
+name: fix-style
 
 on:
     push:
@@ -17,7 +17,7 @@ jobs:
             - name: Run php-cs-fixer
               uses: docker://oskarstark/php-cs-fixer-ga
               with:
-                args: --allow-risky=yes
+                args: --config=.php_cs --allow-risky=yes
 
             - uses: stefanzweifel/git-auto-commit-action@v4
               with:
