--- a/.github/workflows/fix-style.yml
+++ b/.github/workflows/fix-style.yml
@@ -10,15 +10,17 @@ jobs:
     php-cs-fixer:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - name: Checkout code
+              uses: actions/checkout@v2
               with:
                   ref: ${{ github.head_ref }}
 
-            - name: Run php-cs-fixer
+            - name: Fix style
               uses: docker://oskarstark/php-cs-fixer-ga
               with:
                 args: --config=.php_cs --allow-risky=yes
 
-            - uses: stefanzweifel/git-auto-commit-action@v4
+            - name: Commit changes
+              uses: stefanzweifel/git-auto-commit-action@v4
               with:
-                  commit_message: Apply php-cs-fixer changes
+                  commit_message: Fix styling changes
