--- a/.github/workflows/fix-style.yml
+++ b/.github/workflows/fix-style.yml
@@ -15,10 +15,17 @@ jobs:
               with:
                   ref: ${{ github.head_ref }}
 
-            - name: Fix style
-              uses: docker://oskarstark/php-cs-fixer-ga
+            - name: Setup PHP
+              uses: shivammathur/setup-php@v1
               with:
-                args: --config=.php_cs --allow-risky=yes
+                  php-version: '7.4'
+                  extensions: mbstring, intl, gd, xml, dom, json, fileinfo, curl, zip, iconv
+
+            - name: Install Dependencies
+              run: composer install --prefer-dist
+
+            - name: Fix Style
+              run: ./vendor/bin/php-cs-fixer fix --diff --allow-risky=yes
 
             - name: Commit changes
               uses: stefanzweifel/git-auto-commit-action@v4
