--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "psr/log": "^1.0",
         "psr/simple-cache": "^1.0",
         "nesbot/carbon": "^1.0|^2.0",
-        "tightenco/collect": "^5.6|^6.0|^7.0|^8.0",
+        "illuminate/collections": "^8.0",
         "illuminate/contracts": "^5.0|^6.0|^7.0|^8.0"
     },
     "require-dev": {
