--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -12,7 +12,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: ubuntu-latest
+                os: [ubuntu-latest]
                 php: [8.1, 8.0, 7.4, 7.3]
 
         name: ${{ matrix.os }} - P${{ matrix.php }}
