--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -28,10 +28,7 @@ jobs:
                   key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
 
             - name: Setup OpenLDAP Test Server
-              uses: DirectoryTree/Setup-OpenLDAP@v1.0.0
-              with:
-                  adminPassword: "secret"
-                  domain: "local.com"
+              run: docker-compose up -d
 
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
