--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,9 @@ services:
      ports:
        - "389:389"
        - "636:636"
+     networks:
+         - local
+
+networks:
+    local:
+        driver: bridge
