--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -9,6 +9,21 @@ on:
 jobs:
     run-tests:
         runs-on: ${{ matrix.os }}
+
+        services:
+            ldap:
+                image: osixia/openldap:1.4.0
+                env:
+                    LDAP_TLS_VERIFY_CLIENT: try
+                    LDAP_OPENLDAP_UID: 1000
+                    LDAP_OPENLDAP_GID: 1000
+                    LDAP_ORGANISATION: Local
+                    LDAP_DOMAIN: local.com
+                    LDAP_ADMIN_PASSWORD: secret
+                ports:
+                    - 389:389
+                    - 636:636
+
         strategy:
             fail-fast: false
             matrix:
@@ -26,9 +41,6 @@ jobs:
               with:
                   path: ~/.composer/cache/files
                   key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
-
-            - name: Setup OpenLDAP Test Server
-              run: docker-compose up -d
 
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
