--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -42,6 +42,9 @@ jobs:
                   path: ~/.composer/cache/files
                   key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
 
+            - name: Create LDAP Config File
+              run: echo "TLS_REQCERT never" > "/etc/ldap/ldap.conf"
+
             - name: Setup PHP
               uses: shivammathur/setup-php@v2
               with:
