--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -42,10 +42,10 @@ jobs:
                   path: ~/.composer/cache/files
                   key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
 
-            - name: File Permissions
+            - name: Set ldap.conf file permissions
               run: sudo chown -R $USER:$USER /etc/ldap/ldap.conf
 
-            - name: Create LDAP Config File
+            - name: Create ldap.conf file disabling TLS verification
               run: sudo echo "TLS_REQCERT never" > "/etc/ldap/ldap.conf"
 
             - name: Setup PHP
