--- a/composer.json
+++ b/composer.json
@@ -29,15 +29,14 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": ">=8.0",
         "ext-ldap": "*",
         "ext-json": "*",
         "psr/log": "^1.0|^2.0|^3.0",
-        "psr/simple-cache": "^1.0|^2.0",
+        "psr/simple-cache": "^3.0",
         "nesbot/carbon": "^1.0|^2.0",
-        "tightenco/collect": "^5.6|^6.0|^7.0|^8.0",
-        "illuminate/contracts": "^5.0|^6.0|^7.0|^8.0|^9.0",
-        "symfony/polyfill-php80": "^1.25"
+        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/collections": "^8.0|^9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
