--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,10 @@
         "ext-ldap": "*",
         "ext-json": "*",
         "psr/log": "^1.0|^2.0|^3.0",
-        "psr/simple-cache": "^1.0|^2.0",
+        "psr/simple-cache": "^1.0|^2.0|^3.0",
         "nesbot/carbon": "^1.0|^2.0",
         "tightenco/collect": "^5.6|^6.0|^7.0|^8.0|^9.0",
-        "illuminate/contracts": "^5.0|^6.0|^7.0|^8.0|^9.0",
+        "illuminate/contracts": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
         "symfony/polyfill-php80": "^1.25"
     },
     "require-dev": {
