--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,11 @@
         "php": ">=8.1",
         "ext-ldap": "*",
         "ext-json": "*",
-        "psr/log": "^1.0|^2.0|^3.0",
+        "psr/log": "*",
         "psr/simple-cache": "^3.0",
-        "nesbot/carbon": "^1.0|^2.0",
-        "illuminate/contracts": "^8.0|^9.0",
-        "illuminate/collections": "^8.0|^9.0"
+        "nesbot/carbon": "*",
+        "illuminate/contracts": "^8.0|^9.0|^10.0",
+        "illuminate/collections": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
