--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "ext-ldap": "*",
         "ext-json": "*",
         "psr/log": "*",
-        "psr/simple-cache": "^3.0",
+        "psr/simple-cache": "^2.0|^3.0",
         "nesbot/carbon": "*",
         "illuminate/contracts": "^8.0|^9.0|^10.0",
         "illuminate/collections": "^8.0|^9.0|^10.0"
@@ -41,7 +41,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9.0",
         "mockery/mockery": "^1.0",
-        "spatie/ray": "^1.24"
+        "spatie/ray": "^1.24",
+        "laravel/pint": "^1.6"
     },
     "archive": {
         "exclude": [
