--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "ext-json": "*",
         "ext-iconv": "*",
         "psr/log": "*",
-        "psr/simple-cache": "^2.0|^3.0",
+        "psr/simple-cache": "v1.0|v2.0|^3.0",
         "nesbot/carbon": "*",
         "illuminate/contracts": "^8.0|^9.0|^10.0",
         "illuminate/collections": "^8.0|^9.0|^10.0"
