--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,9 +1,12 @@
 filter:
-    excluded_paths:
-        - tests/*
+  excluded_paths:
+    - tests/*
 build:
-    nodes:
-        analysis:
-            tests:
-                override:
-                    - command: php-scrutinizer-run
+  image: default-bionic
+  environment:
+      php: 8.1.2
+  nodes:
+    analysis:
+      tests:
+        override:
+          - command: php-scrutinizer-run
