--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -28,7 +28,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest]
-                php: [8.1, 8.2]
+                php: [8.1, 8.2, 8.3]
 
         name: ${{ matrix.os }} - P${{ matrix.php }}
 
